--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,8 +8,27 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+    <h2>My Profile</h2>
+    <p th:text="${name}"></p>
+    <p th:text="${skinType}"></p>
+    <p th:text="${manipedi}"></p>
 </div>
+
 <div id = "servicesMenu">
+    <th:block th:each="facial: ${appropriateFacials}">
+        <li th:text="${facial}"></li>
+    </th:block>
 </div>
+
+<div th:if= "${manipedi == 'manicure'}">
+    <h3>Manicure</h3>
+    <p th:replace="fragments::manicureDescription"></p>
+</div>
+
+<div th:if= "${manipedi == 'pedicure'}">
+    <h3>Manicure</h3>
+    <p th:replace="fragments::pedicureDescription"></p>
+</div>
+
 </body>
 </html>
