--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -15,6 +15,8 @@
 </div>
 
 <div id = "servicesMenu">
+    <h3>Facial Treatments</h3>
+    <p>The facial treatments below are recommended by our estheticians for your given skin type.</p>
     <th:block th:each="facial: ${appropriateFacials}">
         <li th:text="${facial}"></li>
     </th:block>
